--- a/DotNet/StreamSeeking/StreamSeeking.csproj
+++ b/DotNet/StreamSeeking/StreamSeeking.csproj
@@ -43,11 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IJsonEntity.cs" />
+    <Compile Include="IJsonStringEntity.cs" />
+    <Compile Include="JsonStringEnums.cs" />
+    <Compile Include="JsonStringUtils.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StreamSeeker.cs" />
-    <Compile Include="JsonSeeker.cs" />
+    <Compile Include="JsonStringEntity.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
