--- a/DotNet/JsonStringEntity/JsonEntity.Tests/DataEntity.Tests.csproj
+++ b/DotNet/JsonStringEntity/JsonEntity.Tests/DataEntity.Tests.csproj
@@ -53,13 +53,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="JsonStringEntityTests\ExtendPropertyTests.cs" />
+    <Compile Include="JsonStringEntityTests\ReadArrayTests.cs" />
     <Compile Include="JsonStringUtilsTests\GetPropertyTypeTests.cs" />
     <Compile Include="JsonStringUtilsTests\GetValuePositionTests.cs" />
     <Compile Include="JsonStringUtilsTests\IsFistParenthesesClosedTests.cs" />
     <Compile Include="JsonStringUtilsTests\IsJsonValueClosedTests.cs" />
     <Compile Include="JsonStringEntityTests\SetPropertyTests.cs" />
-    <Compile Include="MockClasses\MockData.cs" />
-    <Compile Include="MockClasses\TestJsonModels.cs" />
+    <Compile Include="TestData\MockData.cs" />
+    <Compile Include="TestData\TestJsonModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="JsonStringEntityTests\ReadTests.cs" />
     <Compile Include="StreamSeekerTests\ReadFromTests.cs" />
@@ -70,9 +71,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\StreamSeeking\StreamSeeking.csproj">
+    <ProjectReference Include="..\JsonEntity\DataEntity.csproj">
       <Project>{d695b736-4b91-420d-9aaf-0fed9ab6034d}</Project>
-      <Name>StreamSeeking</Name>
+      <Name>DataEntity</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
