--- a/DotNet/JsonStringEntity/JsonEntity.Tests/DataEntity.Tests.csproj
+++ b/DotNet/JsonStringEntity/JsonEntity.Tests/DataEntity.Tests.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="JsonDictionaryTests\ToObjectTests.cs" />
     <Compile Include="JsonStringEntityTests\ExtendPropertyTests.cs" />
     <Compile Include="JsonStringEntityTests\ReadArrayTests.cs" />
     <Compile Include="JsonStringEntityTests\ReadObjectTests.cs" />
@@ -61,6 +62,7 @@
     <Compile Include="JsonStringUtilsTests\IsFistParenthesesClosedTests.cs" />
     <Compile Include="JsonStringUtilsTests\IsJsonValueClosedTests.cs" />
     <Compile Include="JsonStringEntityTests\SetPropertyTests.cs" />
+    <Compile Include="ReflectionUtilsTests\GenerateGenericListTypeWithTypeTests.cs" />
     <Compile Include="TestData\MockData.cs" />
     <Compile Include="TestData\TestJsonModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -78,6 +80,7 @@
       <Name>DataEntity</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
