--- a/DotNet/JsonStringEntity/JsonEntity/DataEntity.csproj
+++ b/DotNet/JsonStringEntity/JsonEntity/DataEntity.csproj
@@ -36,6 +36,9 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,16 +49,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="JsonEntity.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="JsonString\IJsonStringEntity.cs" />
+    <Compile Include="JsonString\JsonDictionary.cs" />
     <Compile Include="JsonString\JsonStringEnums.cs" />
     <Compile Include="JsonString\JsonStringUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReflectionUtils.cs" />
     <Compile Include="StreamSeeker.cs" />
     <Compile Include="JsonString\JsonStringEntity.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
