--- a/DotNet/Functional/Functional.csproj
+++ b/DotNet/Functional/Functional.csproj
@@ -46,6 +46,8 @@
     <Compile Include="FCsh.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="FunctionInterface.cs" />
+    <Compile Include="SiteCrackerJsonModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
