implementing title structured list like a tree

--- a/DotNet/JsonStringEntity/JsonEntity.Tests/DataEntity.Tests.csproj
+++ b/DotNet/JsonStringEntity/JsonEntity.Tests/DataEntity.Tests.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ImageList_Tests.cs" />
     <Compile Include="JsonDictionaryTests\ToObjectTests.cs" />
     <Compile Include="JsonStringEntityTests\ExtendPropertyTests.cs" />
     <Compile Include="JsonStringEntityTests\ReadArrayTests_ArrayProperty.cs" />
