--- a/DotNet/JsonStringEntity/JsonEntity/DataEntity.csproj
+++ b/DotNet/JsonStringEntity/JsonEntity/DataEntity.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TitleStructuredList.cs" />
     <Compile Include="ObjectExtensions.cs" />
     <Compile Include="JsonString\IJsonStringEntity.cs" />
     <Compile Include="JsonString\JsonDictionary.cs" />
