--- a/DotNet/Functional/Functional.csproj
+++ b/DotNet/Functional/Functional.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FCsh.cs" />
+    <Compile Include="ConsoleCommand.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FunctionInterface.cs" />
