--- a/DotNet/StringNum/StringNumTests/StringNumTests.csproj
+++ b/DotNet/StringNum/StringNumTests/StringNumTests.csproj
@@ -23,4 +23,9 @@
     <ProjectReference Include="..\StringNum\StringNum.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="HelperTests\" />
+    <Folder Include="Real\" />
+  </ItemGroup>
+
 </Project>
