--- a/Typescript/Rxjs/package.json
+++ b/Typescript/Rxjs/package.json
@@ -21,7 +21,7 @@
     "expose-loader": "^0.7.5",
     "file-loader": "^4.2.0",
     "image-webpack-loader": "^6.0.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.14.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "ts-loader": "^6.0.1",
@@ -37,6 +37,7 @@
     "lodash": "^4.17.15",
     "popper.js": "^1.15.0",
     "rxjs": "^6.5.4",
-    "rxjs-compat": "^6.5.4"
+    "rxjs-compat": "^6.5.4",
+    "save": "^2.4.0"
   }
 }
